<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".LoginActivity">

    <!-- Wrapper ConstraintLayout to center content vertically and horizontally -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/formWrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Email Input Layout -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/logInEmailTextBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/orange"
            app:boxStrokeWidth="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/logInEmailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/orange" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Input Layout -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/logInPasswordTextBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/orange"
            app:boxStrokeWidth="2dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logInEmailTextBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/logInPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/orange" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Forgot Password Link -->
        <TextView
            android:id="@+id/btnForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinssemibold"
            android:text="@string/forgot_password"
            android:textColor="@color/orange"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/logInPasswordTextBox"
            app:layout_constraintTop_toBottomOf="@+id/logInPasswordTextBox" />

        <!-- Login Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinssemibold"
            android:text="@string/login"
            android:textColor="@color/white"
            app:backgroundTint="@color/orange"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnForgotPassword" />

        <!-- No Account Text -->
        <TextView
            android:id="@+id/noAccountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppinssemibold"
            android:text="@string/create_account"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/btnLogIn"
            app:layout_constraintStart_toStartOf="@+id/btnLogIn"
            app:layout_constraintTop_toBottomOf="@+id/btnLogIn" />

        <!-- Sign Up Now Link -->
        <TextView
            android:id="@+id/btnSignUpNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinssemibold"
            android:text="@string/sign_up_now"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/noAccountText"
            app:layout_constraintStart_toStartOf="@+id/noAccountText"
            app:layout_constraintTop_toBottomOf="@+id/noAccountText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
