<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@color/light_grey">

    <ImageView
        android:id="@+id/backBtnImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_ios_24"
        app:tint="@color/orange"/>

    <TextView
        android:id="@+id/createAnAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/create_an_account"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backBtnImg" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/name"
        android:textColor="@color/orange"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/nameTextBox"
        app:layout_constraintTop_toBottomOf="@+id/createAnAccount" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTextBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:boxStrokeColor="@color/orange"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/name"
            android:inputType="text"
            android:textColor="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/username"
        android:textColor="@color/orange"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/nameTextBox"
        app:layout_constraintTop_toBottomOf="@+id/nameTextBox" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameTextBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:boxStrokeColor="@color/orange"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/username"
            android:inputType="text"
            android:textColor="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/email"
        android:textColor="@color/orange"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/usernameTextBox"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextBox" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:boxStrokeColor="@color/orange"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/password"
        android:textColor="@color/orange"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/passwordTextBox"
        app:layout_constraintTop_toBottomOf="@+id/emailTextBox" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:boxStrokeColor="@color/orange"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColor="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/signup"
        android:textColor="@color/white"
        app:backgroundTint="@color/orange"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextBox">

    </com.google.android.material.button.MaterialButton>

</androidx.constraintlayout.widget.ConstraintLayout>